--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -1572,6 +1572,10 @@ releases:
       - hash: 856b731da2d484c1170282aa0758821840da79fb
         repo: openstack/openstack-ansible
     version: 16.0.15
+  - projects:
+      - hash: 0e03f46a2ebb0ffc6f12384f19ec1184434e7a09
+        repo: openstack/openstack-ansible
+    version: 16.0.16
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
