--- a/deliverables/ocata/openstack-ansible.yaml
+++ b/deliverables/ocata/openstack-ansible.yaml
@@ -2200,6 +2200,10 @@ releases:
       - hash: b54c9e5ef3922884dbb0acb652e139f13975ec6a
         repo: openstack/openstack-ansible
     version: 15.1.23
+  - projects:
+      - hash: f69a336501ba1533ee568cbc83d06fadf7441dbc
+        repo: openstack/openstack-ansible
+    version: 15.1.24
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
