--- a/deliverables/rocky/oslo.service.yaml
+++ b/deliverables/rocky/oslo.service.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 6d82217fbe7ec81cf65142e8ccdbee3cee44dff9
         repo: openstack/oslo.service
     version: 1.31.2
+  - projects:
+      - hash: 62d4119dac47ab31e924a62ee2184e32e8d9fb02
+        repo: openstack/oslo.service
+    version: 1.31.3
