--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -100,5 +100,9 @@ releases:
       - hash: 915e62ef7b1af4f3449457af1dbb77b0d11635f3
         repo: openstack-dev/pbr
     version: 4.1.1
+  - projects:
+      - hash: 6f5c1ee8e4e9c1c05f16b7dfe57c3245ad38b0cf
+        repo: openstack-dev/pbr
+    version: 4.2.0
 repository-settings:
   openstack-dev/pbr: {}
