--- a/deliverables/rocky/python-mistralclient.yaml
+++ b/deliverables/rocky/python-mistralclient.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 0059b271a600af6391e73d76a6c21b172d08f890
         repo: openstack/python-mistralclient
     version: 3.6.1
+  - projects:
+      - hash: f0ee48fa72bbbb29b06028f3c2a2600a1636fbe3
+        repo: openstack/python-mistralclient
+    version: 3.7.0
