--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -136,5 +136,9 @@ releases:
       - hash: a750f2a46557bde5188b40c303e3a1f426611984
         repo: openstack/openstackdocstheme
     version: 1.21.0
+  - projects:
+      - hash: 611e8395a1d60b9748047822e834a115162f2644
+        repo: openstack/openstackdocstheme
+    version: 1.21.1
 repository-settings:
   openstack/openstackdocstheme: {}
