Storlets Rocky-3 milestone release
Change-Id: Iab03f5e747396ee8516a91c26047f6b7498451a4

--- a/deliverables/rocky/storlets.yaml
+++ b/deliverables/rocky/storlets.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - repo: openstack/storlets
         hash: 2ce87cf277f0927713ceff9781d5c96ffb960240
+  - version: 2.0.0.0b3
+    projects:
+      - repo: openstack/storlets
+        hash: 2fc038973bd3638143d410ef3f0800657ea5151d
 repository-settings:
   openstack/storlets: {}
