--- a/deliverables/rocky/python-tackerclient.yaml
+++ b/deliverables/rocky/python-tackerclient.yaml
@@ -15,3 +15,10 @@ releases:
     projects:
       - repo: openstack/python-tackerclient
         hash: c6f918cc51a65e87f4e7314012d58845aeb65e77
+  - version: 0.14.0
+    projects:
+      - repo: openstack/python-tackerclient
+        hash: 71897e549f4f97db3df66522562fb8c702c379f6
+branches:
+  - name: stable/rocky
+    location: 0.14.0
