updated swiftclient stable branch info
Change-Id: Iee0bf5c2481f389bb486b01a19f36c325136d935

--- a/deliverables/rocky/python-swiftclient.yaml
+++ b/deliverables/rocky/python-swiftclient.yaml
@@ -11,3 +11,6 @@ releases:
     projects:
       - repo: openstack/python-swiftclient
         hash: 1cf074f4da62b7a42f88aef3c8571e7b6e850823
+branches:
+  - name: stable/rocky
+    location: 3.6.0
