--- a/deliverables/queens/manila.yaml
+++ b/deliverables/queens/manila.yaml
@@ -37,6 +37,10 @@ releases:
       - hash: b1682a7902f81ea55e621dd8cce849d945315959
         repo: openstack/manila
     version: 6.0.1
+  - projects:
+      - hash: 57d981b12a4a390af2ed184adedc64b8e210de85
+        repo: openstack/manila
+    version: 6.0.2
 cycle-highlights:
   - |
     Added drivers for Infinidat, MapR-FS, and Veritas
