--- a/deliverables/queens/puppet-manila.yaml
+++ b/deliverables/queens/puppet-manila.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: 6c18418b1381acab91b449510253fdacdfbb33a7
         repo: openstack/puppet-manila
     version: 12.4.0
+  - projects:
+      - hash: 4158c9e8bb6373b5fffdb29c47ce5c26ef1e4935
+        repo: openstack/puppet-manila
+    version: 12.5.0
 repository-settings:
   openstack/puppet-manila: {}
 branches:
