--- a/deliverables/queens/python-manilaclient.yaml
+++ b/deliverables/queens/python-manilaclient.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 27c189f0f3e61590490380d6640628c11b5f7324
         repo: openstack/python-manilaclient
     version: 1.21.0
+  - projects:
+      - hash: 21631ace9d33cbbf80a06d0f05b567170ae7bc2c
+        repo: openstack/python-manilaclient
+    version: 1.21.1
 branches:
   - location: 1.21.0
     name: stable/queens
