TripleO rocky M3 release
Change-Id: Idf3aa8b586d9e7da0a57e2b084f29a94991f5e97

--- a/deliverables/rocky/instack-undercloud.yaml
+++ b/deliverables/rocky/instack-undercloud.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 41c401ca65ff32b2a3a1cdd07aabfdcc1bc508ab
         repo: openstack/instack-undercloud
     version: 9.1.0
+  - projects:
+      - hash: 41d04607df0912a454edb70db6abc8778b86f88d
+        repo: openstack/instack-undercloud
+    version: 9.2.0
