--- a/deliverables/rocky/os-net-config.yaml
+++ b/deliverables/rocky/os-net-config.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 4f9c63652fd8cb09b8c60d25f6476bf2025c8675
         repo: openstack/os-net-config
     version: 9.0.0
+  - projects:
+      - hash: 6641c9f8c0cb69e8495cb4360f50c5e048c50be1
+        repo: openstack/os-net-config
+    version: 9.1.0
