--- a/deliverables/rocky/paunch.yaml
+++ b/deliverables/rocky/paunch.yaml
@@ -9,5 +9,9 @@ releases:
       - hash: 9348078452965b54ef5337913ac602e4194b7796
         repo: openstack/paunch
     version: 3.0.0
+  - projects:
+      - hash: 9b55e86d0ecd638e03d72684a87747bc496d83b1
+        repo: openstack/paunch
+    version: 3.1.0
 repository-settings:
   openstack/paunch: {}
