--- a/deliverables/rocky/puppet-tripleo.yaml
+++ b/deliverables/rocky/puppet-tripleo.yaml
@@ -14,3 +14,7 @@ releases:
       - hash: e1ecbb129c8447ed388c1463307417997d63fd94
         repo: openstack/puppet-tripleo
     version: 9.1.0
+  - projects:
+      - hash: 97f90021c2f43694226353680fbb75c4be7c5e77
+        repo: openstack/puppet-tripleo
+    version: 9.2.0
