--- a/deliverables/rocky/python-tripleoclient.yaml
+++ b/deliverables/rocky/python-tripleoclient.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 00d308fd93527d923a734ef2422605693364317f
         repo: openstack/python-tripleoclient
     version: 10.3.0
+  - projects:
+      - hash: a33b1499d7c00e646a9b49715a8a7dbd4467ec91
+        repo: openstack/python-tripleoclient
+    version: 10.4.0
