--- a/deliverables/rocky/tripleo-common.yaml
+++ b/deliverables/rocky/tripleo-common.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: cd1dd6aa834b05b3e4822088108cd9c6ab0b9d27
         repo: openstack/tripleo-common
     version: 9.1.0
+  - projects:
+      - hash: 2dfed4e87aad128ab3c0014def5cde6b0c32f2ca
+        repo: openstack/tripleo-common
+    version: 9.2.0
