--- a/deliverables/rocky/tripleo-heat-templates.yaml
+++ b/deliverables/rocky/tripleo-heat-templates.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 837a58df1a1eb9fd45f624b765681bbc06aa2ba9
         repo: openstack/tripleo-heat-templates
     version: 9.0.0.0b3
+  - projects:
+      - hash: 5fefd0bd08452c18466fe91b8a0f1470a95d822f
+        repo: openstack/tripleo-heat-templates
+    version: 9.0.0.0b4
