--- a/deliverables/rocky/tripleo-image-elements.yaml
+++ b/deliverables/rocky/tripleo-image-elements.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 2ac38dd68c6ff77ae95d3247316ff251e56a55bc
         repo: openstack/tripleo-image-elements
     version: 9.0.0.0b2
+  - projects:
+      - hash: 30946934ed75549756943597a04e1985ba6b5671
+        repo: openstack/tripleo-image-elements
+    version: 9.0.0.0b3
