--- a/deliverables/rocky/tripleo-puppet-elements.yaml
+++ b/deliverables/rocky/tripleo-puppet-elements.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 939b5861e1ff2f5311a16ccf4c63922493159f56
         repo: openstack/tripleo-puppet-elements
     version: 9.0.0.0b2
+  - projects:
+      - hash: eaebed2ab92c65a1dce55a1d1945bdc47c1e5022
+        repo: openstack/tripleo-puppet-elements
+    version: 9.0.0.0b3
