--- a/deliverables/rocky/tripleo-ui.yaml
+++ b/deliverables/rocky/tripleo-ui.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 041b46f948f9cbf22d828f6d278489bbc53143d2
         repo: openstack/tripleo-ui
     version: 9.1.0
+  - projects:
+      - hash: ecc58508886614d50beaf895f2c020d40f7e0294
+        repo: openstack/tripleo-ui
+    version: 9.2.0
