--- a/deliverables/rocky/tripleo-validations.yaml
+++ b/deliverables/rocky/tripleo-validations.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 96e3bee57e6977ac9d5c267ad15ccc548d4bb0a3
         repo: openstack/tripleo-validations
     version: 9.1.0
+  - projects:
+      - hash: 5e7c25c1243fdbb38daec2d3f620d18b3c6debd2
+        repo: openstack/tripleo-validations
+    version: 9.2.0
