--- a/deliverables/rocky/python-congressclient.yaml
+++ b/deliverables/rocky/python-congressclient.yaml
@@ -1,4 +1,7 @@
 ---
+branches:
+  - location: 1.11.0
+    name: stable/rocky
 include-pypi-link: yes
 launchpad: python-congressclient
 release-model: cycle-with-intermediary
@@ -9,5 +12,9 @@ releases:
     projects:
       - repo: openstack/python-congressclient
         hash: 2d55e1f26e80c5b0b31c53c4cae0c971cb0f08e3
+  - version: 1.11.0
+    projects:
+      - repo: openstack/python-congressclient
+        hash: c7cd43b5fbb2923c802be4c04933ff8e359ddb85
 repository-settings:
   openstack/python-congressclient: {}
