Tag congress-dashboard R3
Change-Id: I623c6165ea03e932a14b33f967d0ff3acfafb354

--- a/deliverables/rocky/congress-dashboard.yaml
+++ b/deliverables/rocky/congress-dashboard.yaml
@@ -13,5 +13,9 @@ releases:
     projects:
       - repo: openstack/congress-dashboard
         hash: 1f9b10ba3c9d9eba9bea4fad6a1231865f6361e1
+  - version: 3.0.0.0b3
+    projects:
+      - repo: openstack/congress-dashboard
+        hash: cdf77af495c650254aa99d50e3fe5c6eadbe3c5e
 repository-settings:
   openstack/congress-dashboard: {}
