--- a/deliverables/rocky/congress.yaml
+++ b/deliverables/rocky/congress.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - repo: openstack/congress
         hash: 8dbe637913142941597b6789c65cb402b6a7df82
+  - version: 8.0.0.0b3
+    projects:
+      - repo: openstack/congress
+        hash: 5c43a61a02c3d343fffd2df13554364c43a659a2
 repository-settings:
   openstack/congress: {}
