--- a/deliverables/rocky/barbican.yaml
+++ b/deliverables/rocky/barbican.yaml
@@ -14,3 +14,7 @@ releases:
       - hash: 4c057e35eb6ac854ee9682b6fe281179b40c0920
         repo: openstack/barbican
     version: 7.0.0.0b2
+  - projects:
+      - hash: 1baaacfa3ad9ca4d39c9c5f9a103298758b7d182
+        repo: openstack/barbican
+    version: 7.0.0.0b3
