Trove releases for Rocky milestone-3
Change-Id: Ia064c2accdef0b93ee8a585afa89d0882a858ddf
Signed-off-by: Zhao Chao <zhaochao1984@gmail.com>

--- a/deliverables/rocky/python-troveclient.yaml
+++ b/deliverables/rocky/python-troveclient.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 1dd0c2e26f426f05a9efc7110f359ba9554a7bf9
         repo: openstack/python-troveclient
     version: 2.15.0
+  - projects:
+      - hash: 3adf5fe392102c088b72c4dac6f10eaf1f0e7983
+        repo: openstack/python-troveclient
+    version: 2.16.0
