--- a/deliverables/rocky/trove-dashboard.yaml
+++ b/deliverables/rocky/trove-dashboard.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 39aec67e0c40b325fa6e1a4e409221d2dde706be
         repo: openstack/trove-dashboard
     version: 11.0.0.0b1
+  - projects:
+      - hash: 9b7f3d9561ce47f370642a3d169fce6469203148
+        repo: openstack/trove-dashboard
+    version: 11.0.0.0b3
