--- a/deliverables/rocky/trove.yaml
+++ b/deliverables/rocky/trove.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 48ac45dae1488491c0ddcf5e2fae3772e4833208
         repo: openstack/trove
     version: 10.0.0.0b1
+  - projects:
+      - hash: 4645f5518dd2df24bb5701decf8e7a75a28ed2bd
+        repo: openstack/trove
+    version: 10.0.0.0b3
