--- a/deliverables/rocky/neutron-lbaas-dashboard.yaml
+++ b/deliverables/rocky/neutron-lbaas-dashboard.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: dde6dfb2eba8eb2f1d9cd61986032b512330b281
         repo: openstack/neutron-lbaas-dashboard
     version: 5.0.0.0b2
+  - projects:
+      - hash: dde6dfb2eba8eb2f1d9cd61986032b512330b281
+        repo: openstack/neutron-lbaas-dashboard
+    version: 5.0.0.0b3
