--- a/deliverables/rocky/octavia-dashboard.yaml
+++ b/deliverables/rocky/octavia-dashboard.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: a670ab72c3e1d2cf17fe1d777a3948736d5d98f6
         repo: openstack/octavia-dashboard
     version: 2.0.0.0b2
+  - projects:
+      - hash: 4f7a5591ae8dd61b25af7f746f20d8f058aa991c
+        repo: openstack/octavia-dashboard
+    version: 2.0.0.0b3
