--- a/deliverables/rocky/octavia.yaml
+++ b/deliverables/rocky/octavia.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 96cce3ed74c63e5756e216a8e48c60de09b027c2
         repo: openstack/octavia
     version: 3.0.0.0b2
+  - projects:
+      - hash: d3092c0facdbd4e3d0c0190710e286914ee14006
+        repo: openstack/octavia
+    version: 3.0.0.0b3
