--- a/deliverables/rocky/neutron-lbaas.yaml
+++ b/deliverables/rocky/neutron-lbaas.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: c3cb720a54a5aa0516427d49338b11f2af21e418
         repo: openstack/neutron-lbaas
     version: 13.0.0.0b2
+  - projects:
+      - hash: 3dede3a5929dee2c37e16e72fb65ca630e5ec175
+        repo: openstack/neutron-lbaas
+    version: 13.0.0.0b3
