--- a/deliverables/rocky/qinling.yaml
+++ b/deliverables/rocky/qinling.yaml
@@ -14,3 +14,7 @@ releases:
       - hash: 2e9d09169f71c5c42bdc2a6cb78cf82cbb29da3c
         repo: openstack/qinling
     version: 1.0.0.0b2
+  - version: 1.0.0.0b3
+    projects:
+      - repo: openstack/qinling
+        hash: 71d9158e7c833171c38f2d43ff7e9a57f2f909b3
