--- a/deliverables/rocky/python-qinlingclient.yaml
+++ b/deliverables/rocky/python-qinlingclient.yaml
@@ -15,3 +15,7 @@ releases:
     projects:
       - repo: openstack/python-qinlingclient
         hash: 01bd648986ba17b860d58af91e2c8c25337b8315
+  - version: 2.0.0
+    projects:
+      - repo: openstack/python-qinlingclient
+        hash: bb21ea9249e73574443d39045090b5770a468c33
