--- a/deliverables/rocky/blazar.yaml
+++ b/deliverables/rocky/blazar.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/blazar
         hash: 29e68d829535650e142f8a228cb016e82917979d
+  - version: 2.0.0.0b3
+    projects:
+      - repo: openstack/blazar
+        hash: 32e356a77c5ac86cc7b237d05b460c2660a7da6e
