--- a/deliverables/rocky/masakari-monitors.yaml
+++ b/deliverables/rocky/masakari-monitors.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/masakari-monitors
         hash: 26d558333d9731ca06da09b26fe6592c49c0ac8a
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/masakari-monitors
+        hash: 1d9b81418be7f1a4d5ae9ab8379e2754f7b31450
