--- a/deliverables/rocky/masakari.yaml
+++ b/deliverables/rocky/masakari.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/masakari
         hash: ddb0249b23f82bb42a50527fae40ef867b4d67b8
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/masakari
+        hash: aa36bdaca5996a647ee5e045a6c420d35ae1fcac
