--- a/deliverables/rocky/python-vitrageclient.yaml
+++ b/deliverables/rocky/python-vitrageclient.yaml
@@ -6,8 +6,17 @@ team: vitrage
 type: client-library
 repository-settings:
   openstack/python-vitrageclient: {}
+branches:
+  - location: 2.3.0
+    name: stable/rocky
 releases:
   - version: 2.2.0
     projects:
       - repo: openstack/python-vitrageclient
         hash: 119addb8bfb532db63efd7e260bacddc6748a0bd
+  - version: 2.3.0
+    projects:
+      - repo: openstack/python-vitrageclient
+        hash: 76e7198fe9d9b7564fead345587aab9adfc043b6
+cycle-highlights:
+  - 'New API for alarm history'
