PowerVMStackers Rocky-3 releases
Tag Rocky-3 for nova-powervm, networking-powervm, and
ceilometer-powervm.

Change-Id: I8057d9606f212b3df1064ae2be7b5509c8e8d542

--- a/deliverables/rocky/ceilometer-powervm.yaml
+++ b/deliverables/rocky/ceilometer-powervm.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - repo: openstack/ceilometer-powervm
         hash: f89854d2f2244f596df6d37436244c62b1cbd929
+  - version: 7.0.0.0b3
+    projects:
+      - repo: openstack/ceilometer-powervm
+        hash: 1bd1f9e639f07b4f53be30ee887f9cced5d80d2a
 repository-settings:
   openstack/ceilometer-powervm: {}
