--- a/deliverables/rocky/nova-powervm.yaml
+++ b/deliverables/rocky/nova-powervm.yaml
@@ -14,5 +14,10 @@ releases:
       - repo: openstack/nova-powervm
         hash: 23bffd275d7b1a4765fbed5f43f649a0620175c1
         tarball-base: nova_powervm
+  - version: 7.0.0.0b3
+    projects:
+      - repo: openstack/nova-powervm
+        hash: e046d4096398a182110d13f1de2a9cd914d84eb6
+        tarball-base: nova_powervm
 repository-settings:
   openstack/nova-powervm: {}
