--- a/deliverables/rocky/networking-powervm.yaml
+++ b/deliverables/rocky/networking-powervm.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - repo: openstack/networking-powervm
         hash: cdd75f18d6357e24160829cd2d1d166d4168f763
+  - version: 7.0.0.0b3
+    projects:
+      - repo: openstack/networking-powervm
+        hash: 154319453d8342b1058f0bd9dd9437d607e7cd1b
 repository-settings:
   openstack/networking-powervm: {}
