Neutron Rocky-3 deliverables
Change-Id: Id8e87091421e2ecc6f13309719f4ced783152c8b

--- a/deliverables/rocky/networking-bagpipe.yaml
+++ b/deliverables/rocky/networking-bagpipe.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: d7be829539c8381d096261a7d5ab6c004d2605a8
         repo: openstack/networking-bagpipe
     version: 9.0.0.0b2
+  - projects:
+      - hash: 18b1c886e9d1ad495b446ecddd5cb6379badebb9
+        repo: openstack/networking-bagpipe
+    version: 9.0.0.0b3
