--- a/deliverables/rocky/networking-bgpvpn.yaml
+++ b/deliverables/rocky/networking-bgpvpn.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 3b503219acc2a25177c35886bbea7899efe68a7c
         repo: openstack/networking-bgpvpn
     version: 9.0.0.0b2
+  - projects:
+      - hash: 2106379047f38ce1abe10a0461e7b7c6449ad608
+        repo: openstack/networking-bgpvpn
+    version: 9.0.0.0b3
