--- a/deliverables/rocky/networking-midonet.yaml
+++ b/deliverables/rocky/networking-midonet.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: 93e43b0e6436851ac6d40c1deefd341107acb69f
         repo: openstack/networking-midonet
     version: 7.0.0.0b2
+  - projects:
+      - hash: 3e86565d1eb82fa456659c0943d567afa7c9a6fd
+        repo: openstack/networking-midonet
+    version: 7.0.0.0b3
