--- a/deliverables/rocky/networking-odl.yaml
+++ b/deliverables/rocky/networking-odl.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: 7c9bb26438975e499cfa42d9dcabd6db5f2f4fe3
         repo: openstack/networking-odl
     version: 13.0.0.0b2
+  - projects:
+      - hash: 33564d37d93420f328472e2c357db5ca11a5fc35
+        repo: openstack/networking-odl
+    version: 13.0.0.0b3
