--- a/deliverables/rocky/networking-ovn.yaml
+++ b/deliverables/rocky/networking-ovn.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: ace4b4d0e96fe4ec9943d0bd8856926f6f143031
         repo: openstack/networking-ovn
     version: 5.0.0.0b2
+  - projects:
+      - hash: fc77b982342c4471094751be9f8544dad55ef824
+        repo: openstack/networking-ovn
+    version: 5.0.0.0b3
