--- a/deliverables/rocky/networking-sfc.yaml
+++ b/deliverables/rocky/networking-sfc.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: 379fcd5cfcb7a71e7dbbe969da0255bc3ff09a33
         repo: openstack/networking-sfc
     version: 7.0.0.0b2
+  - projects:
+      - hash: 379fcd5cfcb7a71e7dbbe969da0255bc3ff09a33
+        repo: openstack/networking-sfc
+    version: 7.0.0.0b3
