--- a/deliverables/rocky/neutron-vpnaas.yaml
+++ b/deliverables/rocky/neutron-vpnaas.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 68fd474f7392dcc9bf68be129c51b21e6d3977a6
         repo: openstack/neutron-vpnaas
     version: 13.0.0.0b2
+  - projects:
+      - hash: bb165298e0270ab3cdc0bd0afab4b51988db4d98
+        repo: openstack/neutron-vpnaas
+    version: 13.0.0.0b3
