--- a/deliverables/rocky/neutron.yaml
+++ b/deliverables/rocky/neutron.yaml
@@ -18,3 +18,7 @@ releases:
       - hash: 9d056139a8b09eb99d6dc5d7e7a519c7a2f69131
         repo: openstack/neutron
     version: 13.0.0.0b2
+  - projects:
+      - hash: f597b4bee00334abac3f5bbcfd2053ec885bcb62
+        repo: openstack/neutron
+    version: 13.0.0.0b3
