--- a/deliverables/rocky/neutron-dynamic-routing.yaml
+++ b/deliverables/rocky/neutron-dynamic-routing.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 26bfa08b23060800a5daf3ab9aa3b8f3019f7f0c
         repo: openstack/neutron-dynamic-routing
     version: 13.0.0.0b2
+  - projects:
+      - hash: 93a8b15840c945a497eb886a16e2dbdd88e76f59
+        repo: openstack/neutron-dynamic-routing
+    version: 13.0.0.0b3
