--- a/deliverables/rocky/neutron-fwaas.yaml
+++ b/deliverables/rocky/neutron-fwaas.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 4b4db7e98c469bc513ed3d0f3dfd1c4c99271dc6
         repo: openstack/neutron-fwaas
     version: 13.0.0.0b2
+  - projects:
+      - hash: d6258868989dc3d11207a02082c361b8a7c1a9dc
+        repo: openstack/neutron-fwaas
+    version: 13.0.0.0b3
