--- a/deliverables/ocata/keystone.yaml
+++ b/deliverables/ocata/keystone.yaml
@@ -41,5 +41,9 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: 439872bc196260fe62e52235e0717040fd934394
+  - projects:
+      - hash: ade177ad357d28746ab4203e56a74e6e1e89c074
+        repo: openstack/keystone
+    version: 11.0.4
 repository-settings:
   openstack/keystone: {}
