Watcher rocky-3 release
Change-Id: I00acb174714e856bb773d489649db9cacfedbe9a

--- a/deliverables/rocky/python-watcherclient.yaml
+++ b/deliverables/rocky/python-watcherclient.yaml
@@ -15,3 +15,7 @@ releases:
     projects:
       - repo: openstack/python-watcherclient
         hash: db012f1f8fe44ffc55e356645b57c2dd3c8cddbf
+  - version: 2.1.0
+    projects:
+      - repo: openstack/python-watcherclient
+        hash: 6681724daa2155364a1ef131157d19561209f23f
