--- a/deliverables/rocky/watcher-dashboard.yaml
+++ b/deliverables/rocky/watcher-dashboard.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/watcher-dashboard
         hash: 233ede982f11d2fc97f404957205b510d2489a7a
+  - version: 1.10.0
+    projects:
+      - repo: openstack/watcher-dashboard
+        hash: 79fcf55752d350911f50515de7c6956185a3bce7
