--- a/deliverables/rocky/watcher.yaml
+++ b/deliverables/rocky/watcher.yaml
@@ -16,3 +16,8 @@ releases:
       - repo: openstack/watcher
         hash: 3591d9fa0a32f75f5043c6ed0971f5c03cb1f613
         tarball-base: python-watcher
+  - version: 1.11.0
+    projects:
+      - repo: openstack/watcher
+        hash: 595cd1d435319fa5b0a03e10ebab704c05a9f7ca
+        tarball-base: python-watcher
