--- a/deliverables/rocky/horizon.yaml
+++ b/deliverables/rocky/horizon.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - hash: b118c2f043b8d6567a9d02170b202be13a3792ea
         repo: openstack/horizon
+  - version: 14.0.0.0b3
+    projects:
+      - hash: e1e5c7954133528c0a4f12deda30159ac86a457d
+        repo: openstack/horizon
 repository-settings:
   openstack/horizon: {}
