Senlin rocky-3 release
Change-Id: I4b4bd2c46bf3f8b5d2de8afa2f921b3eac5ad536

--- a/deliverables/rocky/senlin.yaml
+++ b/deliverables/rocky/senlin.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/senlin
         hash: 125575e0811737ce69338eaf08469c65f322dd31
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/senlin
+        hash: 412ec0be6603c89824a5c9c6e3e59fc6c646ee1b
