--- a/deliverables/rocky/osc-placement.yaml
+++ b/deliverables/rocky/osc-placement.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: placement-osc-plugin
 release-model: cycle-with-intermediary
 team: nova
-type: library
+type: client-library
 repository-settings:
   openstack/osc-placement: {}
 releases:
@@ -15,6 +15,7 @@ releases:
       - hash: 06b5738a3acf1f4fad850c88abf3415457dc73ee
         repo: openstack/osc-placement
     version: 1.2.0
-branches:
-  - location: 1.2.0
-    name: stable/rocky
+  - projects:
+      - hash: 9577cd899541b4c2a5b9fa74a59f4c346bd5addf
+        repo: openstack/osc-placement
+    version: 1.3.0
