--- a/deliverables/rocky/python-saharaclient.yaml
+++ b/deliverables/rocky/python-saharaclient.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/python-saharaclient
         hash: c3fd27e49bbe286d71cc2e2e17cdf149591826eb
+  - version: 2.0.0
+    projects:
+      - repo: openstack/python-saharaclient
+        hash: 2a66f9a7150cd92e45f29bb028b60863a27fa443
 repository-settings:
   openstack/python-saharaclient: {}
