--- a/deliverables/rocky/sahara-dashboard.yaml
+++ b/deliverables/rocky/sahara-dashboard.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - repo: openstack/sahara-dashboard
         hash: 4d04f9c5f5cd9b0aa4d6915910f53a57b412bf11
+  - version: 9.0.0.0b3
+    projects:
+      - repo: openstack/sahara-dashboard
+        hash: 0dc65e958887af74867bd1f95b33fe03663c2ce0
 repository-settings:
   openstack/sahara-dashboard: {}
