--- a/deliverables/rocky/sahara-image-elements.yaml
+++ b/deliverables/rocky/sahara-image-elements.yaml
@@ -13,5 +13,9 @@ releases:
     projects:
       - repo: openstack/sahara-image-elements
         hash: 5d05a3db2f99ef70c32c0b53a29f62f5e38cebe5
+  - version: 9.0.0.0b3
+    projects:
+      - repo: openstack/sahara-image-elements
+        hash: 34e8f4a27a3cf9cc894922e4c870fcf192d1e886
 repository-settings:
   openstack/sahara-image-elements: {}
