--- a/deliverables/rocky/sahara.yaml
+++ b/deliverables/rocky/sahara.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - repo: openstack/sahara
         hash: ebda88534a8bc9b24ed88301c583cc585740d9f1
+  - version: 9.0.0.0b3
+    projects:
+      - repo: openstack/sahara
+        hash: 09b858b8b1f8072205b0dffe70a975373c402cf3
 repository-settings:
   openstack/sahara: {}
