--- a/deliverables/rocky/python-glanceclient.yaml
+++ b/deliverables/rocky/python-glanceclient.yaml
@@ -15,6 +15,10 @@ releases:
       - hash: 2c26f2748f433fbb510715532b45973768bf7483
         repo: openstack/python-glanceclient
     version: 2.12.0
+  - projects:
+      - hash: b79154c5fe68789389d54decc8dfc23c3e2021ef
+        repo: openstack/python-glanceclient
+    version: 2.12.1
 branches:
   - location: 2.12.0
     name: stable/rocky
