rocky: release python-novaclient 11.0.0
This release adds support for:
  - parsing OS_PROJECT_DOMAIN_ID, OS_PROJECT_DOMAIN_NAME,
    OS_USER_DOMAIN_ID, and OS_USER_DOMAIN_NAME
  - microversion 2.63: trusted image certificates
  - microversion 2.64: new format for policy in server groups
  - microversion 2.65: abort live migrations in queued status

Other changes:
  - the --endpoint-override option has been deprecated and replaced
    with --os-endpoint-override to avoid misinterpreting command line
    arguments
  - the deprecated --bypass-url option has been removed, use
    --os-endpoint-override instead

Change-Id: If00dc97037e05e7c91ddab4f4710dafc9d1299cc

--- a/deliverables/rocky/python-novaclient.yaml
+++ b/deliverables/rocky/python-novaclient.yaml
@@ -15,3 +15,10 @@ releases:
       - hash: 0cb0ffa32de475059003f7ee973925caf4bb14e8
         repo: openstack/python-novaclient
     version: 10.3.0
+  - projects:
+      - hash: f1005ce76b0b4927569efdb99e15e04e5d402dc3
+        repo: openstack/python-novaclient
+    version: 11.0.0
+branches:
+  - location: 11.0.0
+    name: stable/rocky
