--- a/deliverables/queens/os-collect-config.yaml
+++ b/deliverables/queens/os-collect-config.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: os-collect-config
-release-model: cycle-trailing
+release-model: cycle-with-intermediary
 release-type: python-pypi
 team: tripleo
 type: other
