--- a/deliverables/queens/paunch.yaml
+++ b/deliverables/queens/paunch.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: paunch
-release-model: cycle-trailing
+release-model: cycle-with-intermediary
 release-type: python-pypi
 team: tripleo
 type: other
