--- a/deliverables/rocky/glance.yaml
+++ b/deliverables/rocky/glance.yaml
@@ -18,5 +18,9 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 7d3ae1e9a67957489eb73585e0fc04233e60e65f
+  - version: 17.0.0.0b3
+    projects:
+      - repo: openstack/glance
+        hash: ff77f59bd4376be3bed8f8c62258f9973b7ef1f2
 repository-settings:
   openstack/glance: {}
