nova: release rocky 18.0.0.0b3
Depends-On: https://review.openstack.org/564452
Depends-On: https://review.openstack.org/566813

Change-Id: I65cdff93b4bb9d67cf05d0518f5027b7684a73dc

--- a/deliverables/rocky/nova.yaml
+++ b/deliverables/rocky/nova.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: f9a419e40ff6440d1b85ff175ab862090a970460
         repo: openstack/nova
     version: 18.0.0.0b2
+  - projects:
+      - hash: dd6d7529665eb6bd06de55e0aadc1a860e1edb2a
+        repo: openstack/nova
+    version: 18.0.0.0b3
