--- a/deliverables/rocky/keystone.yaml
+++ b/deliverables/rocky/keystone.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: 104717d45847b3afcbd9adb4bfb887f8a8fffe66
+  - projects:
+      - hash: b8749774559e4e9c8129874712dd1d0bcbf1c0c1
+        repo: openstack/keystone
+    version: 14.0.0.0b3
 repository-settings:
   openstack/keystone: {}
