--- a/deliverables/rocky/murano-dashboard.yaml
+++ b/deliverables/rocky/murano-dashboard.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/murano-dashboard
         hash: 4dea57101471d69ba8a6abb6f516917d01cf09dc
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/murano-dashboard
+        hash: 1759e86ec20eed81291d7fabd3e15a0c2e92882d
 repository-settings:
   openstack/murano-dashboard: {}
