--- a/deliverables/rocky/murano.yaml
+++ b/deliverables/rocky/murano.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/murano
         hash: bfac34bf01d64698993b55a0f4f3b9d81f5c2a07
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/murano
+        hash: a4931ab8d9b0cb300b2bc740b1df43235f5839dd
 repository-settings:
   openstack/murano: {}
