--- a/deliverables/rocky/python-cinderclient.yaml
+++ b/deliverables/rocky/python-cinderclient.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: a4fc1416ef43669aafd7dca6e95d68b4119fded5
         repo: openstack/python-cinderclient
     version: 3.6.1
+  - projects:
+      - hash: e76c4958ea779a44f2d0351616c94b627aebe0fe
+        repo: openstack/python-cinderclient
+    version: 4.0.0
