os-vif: release rocky 1.11.1
This is a small bugfix release to fix the loading of the new
NoOp Plugin when os-vif is installed from a package.

Change-Id: I1500acdddf7c9d26b6245233664d8927f20c3953

--- a/deliverables/rocky/os-vif.yaml
+++ b/deliverables/rocky/os-vif.yaml
@@ -15,6 +15,11 @@ releases:
       - repo: openstack/os-vif
         hash: 96b5a11d35d74faf7c9866dceef66984dbcddae6
         tarball-base: os_vif
+  - projects:
+      - hash: 538f9de75650407271ac14e8b9ce8ac735fb7eba
+        repo: openstack/os-vif
+        tarball-base: os_vif
+    version: 1.11.1
 repository-settings:
   openstack/os-vif: {}
 branches:
