--- a/deliverables/rocky/kolla.yaml
+++ b/deliverables/rocky/kolla.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: b9b872b0b5c7a1f873d2e6fad03d58a72760f1f1
         repo: openstack/kolla
     version: 7.0.0.0b2
+  - projects:
+      - hash: 778f6dc8235d251d851044b3c54c3d7aded750f5
+        repo: openstack/kolla
+    version: 7.0.0.0b3
