--- a/deliverables/rocky/kolla-ansible.yaml
+++ b/deliverables/rocky/kolla-ansible.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 74d239bb88d762a254c15c8a06126eeafcf0cdf9
         repo: openstack/kolla-ansible
     version: 7.0.0.0b2
+  - projects:
+      - hash: cd03876e7d646fe7bc1842888ef79729f52a744b
+        repo: openstack/kolla-ansible
+    version: 7.0.0.0b3
