--- a/deliverables/rocky/python-manilaclient.yaml
+++ b/deliverables/rocky/python-manilaclient.yaml
@@ -13,5 +13,12 @@ releases:
       - hash: b0b08cc65007180a750fe1bc38e1bc26d4e899f9
         repo: openstack/python-manilaclient
     version: 1.23.0
+  - projects:
+      - hash: ecbe1f961caae0283f3114c68271173804a785d6
+        repo: openstack/python-manilaclient
+    version: 1.24.0
+branches:
+  - location: 1.24.0
+    name: stable/rocky
 repository-settings:
   openstack/python-manilaclient: {}
