--- a/deliverables/rocky/manila.yaml
+++ b/deliverables/rocky/manila.yaml
@@ -12,5 +12,9 @@ releases:
       - hash: 4c943fbcb25f4d4f8e2e9d8b77f0e389bed13c8b
         repo: openstack/manila
     version: 7.0.0.0b2
+  - projects:
+      - hash: 1384257e4f205b2c2d79064bc6723aada781d670
+        repo: openstack/manila
+    version: 7.0.0.0b3
 repository-settings:
   openstack/manila: {}
