--- a/deliverables/rocky/heat-dashboard.yaml
+++ b/deliverables/rocky/heat-dashboard.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - repo: openstack/heat-dashboard
         hash: 71f627702a769b947e881984e255a030595601df
+  - version: 1.3.0
+    projects:
+      - repo: openstack/heat-dashboard
+        hash: 3812cc2667d082af6625b0a6052ef54ffc1d4f71
 repository-settings:
   openstack/heat-dashboard: {}
