Cut bugfix release 0.17.1 for openstacksdk
One of the new features in 0.17.0 was broken and was discovered by the
user for which the new feature was added (zuul swift log uploads to be
precise)

Followup bugfix. The patch has landed in master and this is the commit
from it having been backported to stable/rocky

Change-Id: I935b98620c6ede2b6097f12ab153fa29bbb9b64a

--- a/deliverables/rocky/openstacksdk.yaml
+++ b/deliverables/rocky/openstacksdk.yaml
@@ -30,6 +30,10 @@ releases:
       - hash: 4600f1ec7b3ca9ca3a9a5cbcfdcce9578087d115
         repo: openstack/openstacksdk
     version: 0.17.0
+  - projects:
+      - hash: f28a1b09794f62232f2bc74a3d0ade5bbf84f812
+        repo: openstack/openstacksdk
+    version: 0.17.1
 repository-settings:
   openstack/openstacksdk: {}
 branches:
