add cyborg ms3 and cyborgclient rocky stable
Change-Id: Ia27ffd4ecb14c111e1f0bfd5c3dcc392488a11ea
Signed-off-by: zhipengh <huangzhipeng@huawei.com>

--- a/deliverables/rocky/cyborg.yaml
+++ b/deliverables/rocky/cyborg.yaml
@@ -14,5 +14,10 @@ releases:
       - hash: 10c394406f139a8f356abbe00f4dd89540727772
         repo: openstack/cyborg
         tarball-base: openstack-cyborg
+  - version: 1.0.0.0b3
+    projects:
+      - hash: 06970bcd0b1ddf98b911fd152b6f173cec55dff8
+        repo: openstack/cyborg
+        tarball-base: openstack-cyborg
 repository-settings:
   openstack/cyborg: {}
