--- a/deliverables/rocky/python-cyborgclient.yaml
+++ b/deliverables/rocky/python-cyborgclient.yaml
@@ -11,3 +11,10 @@ releases:
     projects:
       - repo: openstack/python-cyborgclient
         hash: 516a37b52d5080c6d4093911ecd649128e973dd6
+  - version: 0.2.0
+    projects:
+      - repo: openstack/python-cyborgclient
+        hash: 16bdd7cccf1966996c327ca14d1ce417ad1e7926
+branches:
+  - name: stable/rocky
+    location: 0.2.0
