--- a/deliverables/rocky/python-manilaclient.yaml
+++ b/deliverables/rocky/python-manilaclient.yaml
@@ -17,6 +17,10 @@ releases:
       - hash: ecbe1f961caae0283f3114c68271173804a785d6
         repo: openstack/python-manilaclient
     version: 1.24.0
+  - projects:
+      - hash: 316bd218f15c22a1a2ea70681f8105aeb9366fe2
+        repo: openstack/python-manilaclient
+    version: 1.24.1
 branches:
   - location: 1.24.0
     name: stable/rocky
