--- a/deliverables/rocky/panko.yaml
+++ b/deliverables/rocky/panko.yaml
@@ -5,3 +5,11 @@ team: Telemetry
 type: service
 repository-settings:
   openstack/panko: {}
+releases:
+  - version: 5.0.0
+    projects:
+      - repo: openstack/panko
+        hash: fb019f8414ff2dcdf52afeaaea9394d72395fb83
+branches:
+  - location: 5.0.0
+    name: stable/rocky
