--- a/deliverables/rocky/python-aodhclient.yaml
+++ b/deliverables/rocky/python-aodhclient.yaml
@@ -10,5 +10,10 @@ releases:
       - repo: openstack/python-aodhclient
         hash: 6d1ad0fba7fe4790a19eefc6b8f9d506674720ae
         tarball-base: aodhclient
+  - version: 1.1.1
+    projects:
+      - repo: openstack/python-aodhclient
+        hash: a5462e6623e5ff1e29d5ec39d9d6ac68e88eceae
+        tarball-base: aodhclient
 repository-settings:
   openstack/python-aodhclient: {}
