--- a/deliverables/series_status.yaml
+++ b/deliverables/series_status.yaml
@@ -1,4 +1,10 @@
 ---
+- name: stein
+  status: future
+  initial-release: 2019-04-11
+  next-phase:
+    status: development
+    date: 2018-08-30
 - name: rocky
   status: development
   initial-release: 2018-08-30
