ec2-api: add stable/rocky branch
Change-Id: Id85d3badd3193b1c46adfff7e11b94cf84b40be2

--- a/deliverables/rocky/ec2-api.yaml
+++ b/deliverables/rocky/ec2-api.yaml
@@ -11,3 +11,6 @@ releases:
     projects:
       - repo: openstack/ec2-api
         hash: c65cb663de5d1cfb239bbf32610f0f7a71c7e170
+branches:
+  - location: 7.0.0
+    name: stable/rocky
